[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Enemigos/spr_enemigo_prueba.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Nivel1Boss/Nivel1BossEstadoStart.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Nivel2Boss/Nivel2BossEstadoAttack1.gd" type="Script" id=4]
[ext_resource path="res://Objects/Enemigos/Proyectiles/ProyectilEnemigoTargetJugador.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Nivel2Boss/Nivel2BossEstadoAttack2.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Nivel2Boss/Nivel2BossEstadoAttack3Setup.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Nivel2Boss/Nivel2BossEstadoAttack3.gd" type="Script" id=8]
[ext_resource path="res://Objects/Enemigos/Proyectiles/ProyectilEnemigoSpreadDisparador.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/Nivel2Boss/Nivel2BossControl.gd" type="Script" id=10]
[ext_resource path="res://Objects/Enemigos/Lengua.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.6005, 45.4725 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.8486, 11.8564 )

[sub_resource type="Animation" id=3]
resource_name = "anim_bossnivel2_ataque_1"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Lengua/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 21.56, 1 ), Vector2( 21.56, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lengua/CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11.8486, 11.8564 ), Vector2( 247.678, 11.8564 ), Vector2( 247.678, 11.8564 ), Vector2( 11.8486, 11.8564 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lengua/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -253.496, 0 ), Vector2( -253.496, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "anim_bossnivel2_ataque_3_setup"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Nivel2Boss" type="Area2D"]
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Lengua" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="Lengua"]
position = Vector2( 11.7879, -0.0881348 )
texture = ExtResource( 1 )
offset = Vector2( -11.7879, 0.0881348 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lengua"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anim_bossnivel2_ataque_1 = SubResource( 3 )
anims/anim_bossnivel2_ataque_3_setup = SubResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Start" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Attack1" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
proyectil = ExtResource( 5 )

[node name="Attack2" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Attack3Setup" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Attack3" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
proyectil = ExtResource( 9 )
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Attack3Setup" method="_on_AnimationPlayer_animation_finished"]
